# minecraftAnalysis

./: .gitignore  Cargo.toml  LICENSE  README.md  ValidBlocks.txt  index.html  program.py  results.py  techniques.py
.github/workflows/: rust.yml
docs/: index.html
python/: README.md  mining.py  program.py
regions/: README.md
results/: air_chunks.csv  chunks_air_full_range.csv  coal_branch.csv  coal_chunks.csv  coal_poke.csv  copper_branch.csv  copper_chunks.csv  copper_poke.csv  diamonds_branch.csv  diamonds_chunks.csv  diamonds_poke.csv  emeralds_chunks.csv  emeralds_poke.csv  gold_branch.csv  gold_chunks.csv  gold_poke.csv  iron_branch.csv  iron_chunks.csv  iron_poke.csv  lapis_branch.csv  lapis_chunks.csv  lapis_poke.csv  lava_branch.csv  lava_chunks.csv  lava_poke.csv  redstone_branch.csv  redstone_chunks.csv  redstone_poke.csv  results-r.0.0.mca-basic.csv  results-r.0.0.mca-poke.csv  results-r.1.0.mca-basic.csv  results-r.1.0.mca-poke.csv  results-r.10.0.mca-basic.csv  results-r.10.0.mca-poke.csv  results-r.11.0.mca-basic.csv  results-r.11.0.mca-poke.csv  results-r.12.0.mca-basic.csv  results-r.12.0.mca-poke.csv  results-r.13.0.mca-basic.csv  results-r.13.0.mca-poke.csv  (+40 more)
src/: arguments.rs  lib.rs  main.rs  mining.rs  simulations.rs  techniques.rs  ui.rs
src/ui/: mod.rs  simulation.rs  simulation_target.rs
static/html/: chunks.html  conclusion.html  home.html  techniques.html
