[package]
name = "minecraftMining"
version = "0.1.0"
authors = ["nuhtan <ncrichardson15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mvp_anvil = { git = "https://github.com/nuhtan/mvp_anvil.git" }
csv = "1.1.6"
threadpool = "1.8.1"